WebCore/platform/graphics/chromium/UniscribeHelper.cpp
@@ -297,7 +297,6 @@ void UniscribeHelper::draw(GraphicsContext* graphicsContext,
     int curX = x;
     bool firstRun = true;
     bool useWindowsDrawing = windowsCanHandleTextDrawing(graphicsContext);
-    PlatformGraphicsContext* context = graphicsContext->platformContext();
 
     for (size_t screenIndex = 0; screenIndex < m_runs.size(); screenIndex++) {
         int itemIndex = m_screenOrder[screenIndex];
@@ -403,7 +402,7 @@ void UniscribeHelper::draw(GraphicsContext* graphicsContext,
                     SkPoint origin;
                     origin.fX = curX + + innerOffset;
                     origin.fY = y + m_ascent - shaping.m_ascentOffset;
-                    textOutOk = paintSkiaText(context,
+                    textOutOk = paintSkiaText(graphicsContext,
                                               shaping.m_hfont,
                                               glyphCount,
                                               &shaping.m_glyphs[fromGlyph],
